--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <a-scene 
         vr-mode-ui="enabled: false;" 
         renderer="logarithmicDepthBuffer: true; colorManagement: true; sortObjects: true;"
-        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4;">
+        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;">
         
         <!-- Configuración de assets (fuentes y materiales) -->
         <a-assets>
@@ -255,4 +255,5 @@
     </script>
 </body>
 </html>
+
 
