--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 
     <!-- Scripts de A-Frame y AR.js -->
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     
     <!-- Escena de Realidad Aumentada -->
     <a-scene 
         vr-mode-ui="enabled: false;" 
-        renderer="logarithmicDepthBuffer: true; colorManagement: true; sortObjects: true;"
-        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;">
+        renderer="antialias: true; logarithmicDepthBuffer: true; colorManagement: true; sortObjects: true;"
+        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: true; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;">
         
         <!-- Configuración de assets (fuentes y materiales) -->
         <a-assets>
@@ -255,5 +255,3 @@
     </script>
 </body>
 </html>
-
-
