--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- Escena de Realidad Aumentada -->
     <a-scene 
         embedded 
-        arjs='sourceType: webcam; debugUIEnabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
+        arjs='sourceType: webcam; debugUIEnabled: true; detectionMode: mono_and_matrix; matrixCodeType: 4X4_BCH_13_5_5;'
         renderer="antialias: true; logarithmicDepthBuffer: true; colorManagement: true; sortObjects: true;">
         
         <!-- Configuración de assets (fuentes y materiales) -->
@@ -210,3 +210,4 @@
     </script>
 </body>
 </html>
+
