--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
     <!-- Escena de Realidad Aumentada -->
     <a-scene 
         embedded 
-        arjs='sourceType: webcam; debugUIEnabled: true; detectionMode: mono_and_matrix; matrixCodeType: 4X4_BCH_13_5_5;'
-        renderer="antialias: true; logarithmicDepthBuffer: true; colorManagement: true; sortObjects: true;">
+        arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;'
+        renderer="antialias: true; logarithmicDepthBuffer: true; colorManagement: true; sortObjects: true;"
+        vr-mode-ui="enabled: false">
         
         <!-- Configuración de assets (fuentes y materiales) -->
         <a-assets>
@@ -109,35 +110,9 @@
 
         <!-- Marcadores ArUco - Aquí irán tus códigos -->
         
-        <!-- Marcador básico que debería funcionar -->
-        <a-marker type='barcode' value='0'>
-            <a-box position="0 0.5 0" material="color: red;" scale="1 1 1"></a-box>
-            <a-text value="CODIGO 0" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
-        </a-marker>
-
+        <!-- MARCADOR SIMPLE ID 1 -->
         <a-marker type='barcode' value='1'>
-            <a-box position="0 0.5 0" material="color: blue;" scale="1 1 1"></a-box>
-            <a-text value="HOLA SOY GERMAN" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
-        </a-marker>
-
-        <a-marker type='barcode' value='2'>
-            <a-box position="0 0.5 0" material="color: green;" scale="1 1 1"></a-box>
-            <a-text value="FERNANFLOO" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
-        </a-marker>
-
-        <a-marker type='barcode' value='3'>
-            <a-box position="0 0.5 0" material="color: yellow;" scale="1 1 1"></a-box>
-            <a-text value="RUBIUS" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
-        </a-marker>
-
-        <a-marker type='barcode' value='4'>
-            <a-box position="0 0.5 0" material="color: purple;" scale="1 1 1"></a-box>
-            <a-text value="CODIGO 4" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
-        </a-marker>
-
-        <a-marker type='barcode' value='5'>
-            <a-box position="0 0.5 0" material="color: orange;" scale="1 1 1"></a-box>
-            <a-text value="CODIGO 5" position="0 1.5 0" align="center" color="white" scale="2 2 2"></a-text>
+            <a-box position="0 0.5 0" material="color: red;" scale="2 2 2"></a-box>
         </a-marker>
 
 
@@ -210,4 +185,3 @@
     </script>
 </body>
 </html>
-
