--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <div id="lastError">Sin errores</div>
         </div>
 
-        <!-- Configuración balanceada para mejor detección -->
-        <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5; trackingMethod: best; maxDetectionRate: 60; canvasWidth: 640; canvasHeight: 480; patternRatio: 0.6; labelingMode: 1; minConfidence: 0.3;'
+        <!-- Configuración básica que funcionaba -->
+        <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4_BCH_13_5_5;'
                  renderer="antialias: true; logarithmicDepthBuffer: true; colorManagement: true; sortObjects: true;"
                  id="scene">
 
         <!-- Marcador 1 - BERSA TPR9 -->
-        <a-marker id="animated-marker1" type='barcode' value='1' smooth="true" smoothCount="10" smoothTolerance="0.05" smoothThreshold="5" minConfidence="0.3">
+        <a-marker id="animated-marker1" type='barcode' value='1' smooth="true" smoothCount="5" smoothTolerance="0.01" smoothThreshold="2">
             <a-image 
                 src="BERSA TPR9_page-0001.jpg"
                 width="2"
@@ -134,7 +134,7 @@
         </a-marker>
             
         <!-- Marcador 11 - TU MARCADOR IMPRESO (BERSA TPR9) -->
-        <a-marker id="animated-marker11" type='barcode' value='11' smooth="true" smoothCount="5" smoothTolerance="0.01" smoothThreshold="2">
+        <a-marker id="animated-marker11" type='barcode' value='11'>
             <a-image 
                 src="BERSA TPR9_page-0001.jpg"
                 width="2"
@@ -222,7 +222,7 @@
         </a-marker>
 
         <!-- Marcador 19 - TU MARCADOR IMPRESO (BERSA TPR9) -->
-        <a-marker id="animated-marker19" type='barcode' value='19' smooth="true" smoothCount="5" smoothTolerance="0.01" smoothThreshold="2">
+        <a-marker id="animated-marker19" type='barcode' value='19'>
             <a-image 
                 src="BERSA TPR9_page-0001.jpg"
                 width="2"
